[tool.poetry]
name = "flask_cloud"
version = "0.1.0"
description = ""
authors = ["Ara~ta <artembalakshinnum1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
